fixed styling scrollbar

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .times-container {
-    width: 100%;
     padding: 1.5em;   
 }
 
